--- a/img.html
+++ b/img.html
@@ -10,9 +10,11 @@
     </header>
     <section>
       <h2>Práctica 1</h2>
+      <img src="./img/practica-1.png" alt="practica 1" />
     </section>
     <section>
       <h2>Práctica 2</h2>
+      <img src="./img/practica-2.png" alt="practica 2" />
     </section>
   </body>
 </html>
