--- a/order-list.html
+++ b/order-list.html
@@ -10,9 +10,19 @@
     </header>
     <section>
       <h2>Práctica 1</h2>
-    </section>
-    <section>
-      <h2>Práctica 2</h2>
+      <article>
+        <p>
+          Los alumnos son:
+        </p>
+        <ol>
+          <li>
+             Juan Perez
+          </li>
+          <li>
+            José Rodriguez
+          </li>
+        </ol>
+      </article>
     </section>
   </body>
 </html>
